# wsl-rust-gtk-desktop-apps

./: .gitignore  README.md
glade_app/: Cargo.toml
glade_app/resources/: main_window.glade  resources.gresource
glade_app/src/: main.rs
simple_app/: Cargo.toml
simple_app/src/: main.rs
